--- a/CoolBlue/MainWindow.xaml
+++ b/CoolBlue/MainWindow.xaml
@@ -6,9 +6,8 @@
         xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
         xmlns:local="clr-namespace:coolBlue" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:AccountsDataSetTableAdapters="clr-namespace:coolBlue.AccountsDataSetTableAdapters" xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" xmlns:dxp="http://schemas.devexpress.com/winfx/2008/xaml/printing" x:Class="coolBlue.MainWindow"
-        Title="CoolBlue" Height="1080" Width="1920" Loaded="DXRibbonWindow_Loaded" WindowStartupLocation="Manual" Background="#FFB4B4BB" Closing="DXRibbonWindow_Closing" WindowState="Maximized" ScrollViewer.VerticalScrollBarVisibility="Disabled" HorizontalAlignment="Center" VerticalAlignment="Center" WindowStyle="None" Foreground="#FFD4E80C" BorderEffectActiveColor="#FFF0E6E6" ShowActivated="True">
+        Title="CoolBlue" Height="1138" Width="1920" Loaded="DXRibbonWindow_Loaded" WindowStartupLocation="Manual" Background="#FFB4B4BB" Closing="DXRibbonWindow_Closing" WindowState="Maximized" ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="#FFD4E80C" BorderEffectActiveColor="#FFF0E6E6" ShowActivated="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" WindowStyle="None">
     <dxr:DXRibbonWindow.Resources>
-
 
         <!--<Style x:Key="SelectedRowStyle" TargetType="{x:Type dxg:RowControl}">
             <Style.Triggers>
@@ -83,32 +82,35 @@
         <CollectionViewSource x:Key="uSP_getAllAccountsForSplitViewSource" Source="{Binding USP_getAllAccountsForSplit, Source={StaticResource registerDataSet}}"/>
     </dxr:DXRibbonWindow.Resources>
 
-    <dxlc:ScrollBox HorizontalAlignment="Left"  Grid.Row="0" Grid.RowSpan="11" Grid.ColumnSpan="7" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0,30,0,0" Padding="0" Background="#FF0B4678" >
+    <dxlc:ScrollBox HorizontalAlignment="Left"  Grid.Row="0" Grid.RowSpan="11" Grid.ColumnSpan="7" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0" Padding="0" DragScrolling="False" Background="{x:Null}" >
+        <!--<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="0" HorizontalAlignment="Left" VerticalAlignment="Top" >-->
 
-
-        <Grid DataContext="{StaticResource uSP_getLineViewSource}" IsEnabled="True" Margin="10,0">
+        <Grid DataContext="{StaticResource uSP_getLineViewSource}" IsEnabled="True" Margin="0,0" Width="1920" Height="1080" Background="#FF093472">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="223"/>
+                <ColumnDefinition Width="99"/>
+                <ColumnDefinition Width="21"/>
+                <ColumnDefinition Width="21"/>
+                <ColumnDefinition Width="82"/>
                 <ColumnDefinition Width="15"/>
                 <ColumnDefinition Width="446"/>
                 <ColumnDefinition Width="297"/>
                 <ColumnDefinition Width="57"/>
                 <ColumnDefinition Width="240"/>
                 <ColumnDefinition Width="240"/>
-                <ColumnDefinition Width="380"/>
+                <ColumnDefinition Width="400"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Name="r0" Height="100" MinHeight="0"/>
                 <RowDefinition Name="r1" Height="40" MinHeight="0"/>
                 <RowDefinition Name="r2" Height="70"/>
-             
+
                 <RowDefinition Name="r3" Height="100" MinHeight="0"/>
                 <RowDefinition Name="r4" Height="60" MinHeight="0"/>
                 <RowDefinition Name="r5" Height="60" MinHeight="0"/>
                 <RowDefinition Name="r6" Height="10" MinHeight="0"/>
                 <RowDefinition Name="r7" Height="100" MinHeight="0"/>
                 <RowDefinition Name="r8" Height="100" MinHeight="0"/>
-                <RowDefinition Name="r9" Height="310" MinHeight="0"/>
+                <RowDefinition Name="r9" Height="350" MinHeight="0"/>
                 <RowDefinition Name="r10" Height="48" MinHeight="0"/>
                 <RowDefinition Name="r11" Height="1" MinHeight="0"/>
                 <RowDefinition Name="r12" Height="*" MinHeight="0"/>
@@ -116,12 +118,13 @@
 
 
 
+            <!--<dxlc:ScrollBox HorizontalAlignment="Left"  Grid.Row="0" Grid.RowSpan="11" Grid.ColumnSpan="7" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0,30,0,0" Padding="0" Background="#FF0B4678" Width="1900" Height="1000" >-->
 
 
 
 
 
-            <dxr:RibbonControl RibbonStyle="Office2010" Grid.ColumnSpan="8" Height="141" AllowCustomization="False" IsHiddenRibbonCollapsed="False" Grid.RowSpan="3">
+            <dxr:RibbonControl RibbonStyle="Office2010" Grid.ColumnSpan="11" Height="141" AllowCustomization="False" IsHiddenRibbonCollapsed="False" Grid.RowSpan="3" Margin="3,0,-3,0">
                 <dxr:RibbonControl.ToolbarItems>
                     <dxb:BarButtonItemLink/>
                 </dxr:RibbonControl.ToolbarItems>
@@ -202,7 +205,7 @@
 
                 </dxr:RibbonDefaultPageCategory>
             </dxr:RibbonControl>
-            <dxr:RibbonStatusBarControl Height="26" VerticalAlignment="Bottom" Grid.Row="12" Grid.ColumnSpan="8" Foreground="#FF405FB2"  Background="#FF405FB2" >
+            <dxr:RibbonStatusBarControl Height="26" VerticalAlignment="Bottom" Grid.Row="12" Grid.ColumnSpan="11" Foreground="#FF405FB2"  Background="#FF405FB2" >
                 <dxr:RibbonStatusBarControl.RightItems>
                     <dxb:BarButtonItem x:Name="printItem" Content="Print" Glyph="{dx:DXImage Image=Print_16x16.png}"/>
                 </dxr:RibbonStatusBarControl.RightItems>
@@ -211,7 +214,7 @@
             <!--<Grid HorizontalAlignment="Left" Height="100" Margin="527,5,0,0" Grid.Row="2" VerticalAlignment="Top" Width="100" Grid.Column="3"/>-->
 
 
-            <dxg:GridControl Name="uSP_getAllAccountTypesDataGrid" AutoGenerateColumns="None"  EnableSmartColumnsGeneration="False"  ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesViewSource}}" Margin="5,6,10,0" Grid.Row="2" Grid.RowSpan="4" Grid.ColumnSpan="2" SelectionMode="Row" ScrollViewer.CanContentScroll="True">
+            <dxg:GridControl Name="uSP_getAllAccountTypesDataGrid" AutoGenerateColumns="None"  EnableSmartColumnsGeneration="False"  ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesViewSource}}" Margin="5,6,10,0" Grid.Row="2" Grid.RowSpan="4" Grid.ColumnSpan="5" SelectionMode="Row" ScrollViewer.CanContentScroll="True">
                 <dxg:GridControl.View>
                     <dxg:TableView AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" 
                                ShowColumnHeaders ="False"  Grid.ColumnSpan="1" Margin="0,6,0,0"  
@@ -291,7 +294,7 @@
 
 
 
-            <dxg:GridControl Name="grdAccounts" AutoGenerateColumns="None"  EnableSmartColumnsGeneration="False"  ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesUSP_getAllAccountsViewSource}}" Margin="5,0,10,0" Grid.Row="7" Grid.RowSpan="3" Grid.ColumnSpan="2"  CurrentItemChanged="GridControl_CurrentItemChanged">
+            <dxg:GridControl Name="grdAccounts" AutoGenerateColumns="None"  EnableSmartColumnsGeneration="False"  ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesUSP_getAllAccountsViewSource}}" Margin="5,0,10,0" Grid.Row="7" Grid.RowSpan="3" Grid.ColumnSpan="5"  CurrentItemChanged="GridControl_CurrentItemChanged">
                 <dxg:GridControl.View>
                     <dxg:TableView AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" ShowColumnHeaders ="False"  Grid.ColumnSpan="1" Margin="0,0,0,0"  Width="223"  ShowBandsPanel="False" ShowBandsInCustomizationForm="False" ShowCheckBoxSelectorInGroupRow="False" ShowDragDropHint="False" ShowEditFormOnDoubleClick="False" ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" ShowEditFormUpdateCancelButtons="False" ShowGroupPanel="False" ShowHorizontalLines="False" ShowIndicator="False" ShowSearchPanelCloseButton="False" ShowValidationAttributeErrors="False" ShowVerticalLines="False" RowDoubleClick="TableView_RowDoubleClick">
 
@@ -354,7 +357,7 @@
             </dxg:GridControl>
 
 
-            <dxg:GridControl Name="uSP_getLineDataGrid" AutoGenerateColumns="None"  EnableSmartColumnsGeneration="False"  ItemsSource="{Binding Source={StaticResource uSP_getLineViewSource1}}" Margin="0,0,4,0" Grid.Column="2" Grid.Row="3" Grid.RowSpan="7" SelectionMode="Row">
+            <dxg:GridControl Name="uSP_getLineDataGrid" AutoGenerateColumns="None"  EnableSmartColumnsGeneration="False"  ItemsSource="{Binding Source={StaticResource uSP_getLineViewSource1}}" Margin="0,0,4,0" Grid.Column="5" Grid.Row="3" Grid.RowSpan="7" SelectionMode="Row">
                 <dxg:GridControl.View>
                     <dxg:TableView Name="LineView"  AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" 
                                ShowColumnHeaders ="True"  Grid.ColumnSpan="1" Margin="0,0,0,0"  
@@ -554,7 +557,7 @@
 
 
 
-            <dxg:GridControl Name="uSP_getSplitDataGrid" AutoGenerateColumns="None"  EnableSmartColumnsGeneration="False"  ItemsSource="{Binding Source={StaticResource uSP_getLineUSP_getSplitViewSource}}" Margin="0,0,0,0" Grid.Column=" 3" Grid.RowSpan="7" Grid.Row="3" Grid.ColumnSpan="5" SelectionMode="Row">
+            <dxg:GridControl Name="uSP_getSplitDataGrid" AutoGenerateColumns="None"  EnableSmartColumnsGeneration="False"  ItemsSource="{Binding Source={StaticResource uSP_getLineUSP_getSplitViewSource}}" Margin="0,0,0,0" Grid.Column="6" Grid.RowSpan="7" Grid.Row="3" Grid.ColumnSpan="5" SelectionMode="Row">
                 <dxg:GridControl.View>
                     <dxg:TableView Name="SplitsView"  AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" 
                                ShowColumnHeaders ="True"  Grid.ColumnSpan="1" Margin="0,0,0,0"  
@@ -944,13 +947,16 @@
 
             </dxg:GridControl>
 
-            <ComboBox Grid.Column="2" Margin="0,36,10,0" Grid.Row="2" IsSynchronizedWithCurrentItem = "True" SelectedItem="" DisplayMemberPath="cLabel" ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesUSP_getAllAccountsViewSource}}" VerticalAlignment="Top" FontWeight="Bold" FontSize="14" Grid.RowSpan="2"/>
-            <dx:SimpleButton Name="New"  Content="New Transaction" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="1,6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120" Click="SimpleButton_Click_1" RenderTransformOrigin="-1.733,0.444"/>
-            <dxe:TextEdit x:Name="TextEditTotalDr" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,10,0,0" Grid.Row="10" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
-            <dxe:TextEdit x:Name="TextEditTotalCr" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="252,10,0,0" Grid.Row="10" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
-            <dxe:TextEdit x:Name="TextEditBalance" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="336,10,0,0" Grid.Row="10" VerticalAlignment="Top" Width="100" Mask="F" MaskType="Numeric" FontWeight="Normal" Padding="0,0,5,0" Background="Black" Foreground="White"/>
+            <ComboBox Grid.Column="5" Margin="0,36,10,0" Grid.Row="2" IsSynchronizedWithCurrentItem = "True" SelectedItem="" DisplayMemberPath="cLabel" ItemsSource="{Binding Source={StaticResource uSP_getAllAccountTypesUSP_getAllAccountsViewSource}}" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
+            <dx:SimpleButton Name="New"  Content="New Transaction" Grid.Column="5" HorizontalAlignment="Left" Height="27" Margin="1,6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120" Click="SimpleButton_Click_1" RenderTransformOrigin="-1.733,0.444"/>
+            <dxe:TextEdit x:Name="TextEditTotalDr" Grid.Column="5" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,10,0,0" Grid.Row="10" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
+            <dxe:TextEdit x:Name="TextEditTotalCr" Grid.Column="5" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="252,10,0,0" Grid.Row="10" VerticalAlignment="Top" Width="80" Mask="F" MaskType="Numeric"/>
+            <dxe:TextEdit x:Name="TextEditBalance" Grid.Column="5" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="336,10,0,0" Grid.Row="10" VerticalAlignment="Top" Width="100" Mask="F" MaskType="Numeric" FontWeight="Normal" Padding="0,0,5,0" Background="Black" Foreground="White"/>
 
+            <!--</dxlc:ScrollBox>-->
 
         </Grid>
+        <!--</ScrollViewer >-->
     </dxlc:ScrollBox>
 </dxr:DXRibbonWindow>
+
