--- a/CoolBlue/Currency.xaml
+++ b/CoolBlue/Currency.xaml
@@ -1,10 +1,11 @@
 ﻿<dx:ThemedWindow
     x:Class="coolBlue.Currency"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+        xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+        xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+        xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:local="clr-namespace:coolBlue"
     Title="Currency" Height="800" Width="800" WindowStartupLocation="CenterScreen"
     Loaded="ThemedWindow_Loaded" ScrollViewer.HorizontalScrollBarVisibility="Visible"
