--- a/CoolBlue/MainWindow.xaml
+++ b/CoolBlue/MainWindow.xaml
@@ -568,12 +568,12 @@
                     <dxg:TableView Name="SplitsView"  AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" 
                                ShowColumnHeaders ="True"  Grid.ColumnSpan="1" Margin="0,0,0,0"  
                                 ShowBandsPanel="False" ShowBandsInCustomizationForm="False" 
-                               ShowCheckBoxSelectorInGroupRow="False" ShowDragDropHint="False" ShowEditFormOnDoubleClick="False" 
-                               ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" ShowEditFormUpdateCancelButtons="False" 
+                               ShowCheckBoxSelectorInGroupRow="False" ShowDragDropHint="False" 
+                               ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" 
                                ShowGroupPanel="False" ShowHorizontalLines="False" ShowIndicator="False" ShowSearchPanelCloseButton="False" 
                                ShowValidationAttributeErrors="False" ShowVerticalLines="False"
                                CustomCellAppearance="TableView_OnCustomCellAppearance"
-                               NewItemRowPosition="Bottom" ValidateRow="SplitsView_ValidateRow"
+                               NewItemRowPosition="Bottom" ValidateRow="SplitsView_ValidateRow" EnableImmediatePosting="True" EditFormPostMode="Immediate" EditFormShowMode="Dialog"
                                >
 
                         <dxg:TableView.FormatConditions>
@@ -673,7 +673,7 @@
 
 
 
-                <dxg:GridColumn   Name ="nAccountID_D" FieldName="nAccountID_D" Header="Dr Account" Width="150"  AllowSorting="True" AllowEditing="True">
+                <dxg:GridColumn   Name ="nAccountID_D" FieldName="nAccountID_D" Header="Dr Account" Width="150"  AllowSorting="True" AllowEditing="True" ShowValidationAttributeErrors="True">
                     <dxg:GridColumn.EditSettings>
                         <dxg:LookUpEditSettings  ItemsSource="{Binding Source={StaticResource uSP_getAllAccountsForSplitViewSource}}" AutoPopulateColumns="False" IsPopupAutoWidth="False" ValueMember="ID" DisplayMember="cName" >
                             <dxg:LookUpEditSettings.PopupContentTemplate>
@@ -728,7 +728,11 @@
 
 
 
-                <dxg:GridColumn   FieldName="nAmount_D" Header="Dr Amount" EditSettings="{ dxe:TextSettings DisplayFormat=###########.00}" Width="100"  AllowSorting="True" AllowEditing="True" SortOrder="Ascending" SortIndex="0"/>
+                <dxg:GridColumn   FieldName="nAmount_D" Header="Dr Amount" Width="100"  AllowSorting="True" AllowEditing="True" SortOrder="Ascending" SortIndex="0">
+                    <dxg:GridColumn.EditSettings>
+                        <dxe:TextEditSettings DisplayFormat="###########.00" MaskUseAsDisplayFormat="True" MaskType="Numeric" Mask="f2"/>
+                    </dxg:GridColumn.EditSettings>
+                </dxg:GridColumn>
 
 
                 <dxg:GridColumn   Name ="nAccountID_C"  FieldName="nAccountID_C" Header="Cr Account" Width="150"  AllowSorting="True" AllowEditing="True">
@@ -784,7 +788,11 @@
                 </dxg:GridColumn>
 
 
-                <dxg:GridColumn  Name="nAmount_C" FieldName="nAmount_C" Header="Cr Amount" EditSettings="{ dxe:TextSettings DisplayFormat=###########.00}" Width="100" AllowSorting="True" AllowEditing="True"/>
+                <dxg:GridColumn  Name="nAmount_C" FieldName="nAmount_C" Header="Cr Amount" Width="100" AllowSorting="True" AllowEditing="True">
+                    <dxg:GridColumn.EditSettings>
+                        <dxe:TextEditSettings DisplayFormat="###########.00" MaskUseAsDisplayFormat="True" MaskType="Numeric" Mask="f2"/>
+                    </dxg:GridColumn.EditSettings>
+                </dxg:GridColumn>
 
 
                 <dxg:GridColumn   FieldName="nTagID" Header="Tag" Width="100"  AllowSorting="True" AllowEditing="True">
@@ -893,7 +901,11 @@
                 </dxg:GridColumn>
 
                 <dxg:GridColumn  FieldName="cMemo" Header="Memo" Width="130" AllowSorting="True"/>
-                <dxg:GridColumn FieldName="nOriginalAmount" Header="Original Amnt." AllowSorting="True" Width = "100"/>
+                <dxg:GridColumn FieldName="nOriginalAmount" Header="Original Amnt." AllowSorting="True" Width = "100">
+                    <dxg:GridColumn.EditSettings>
+                        <dxe:TextEditSettings MaskUseAsDisplayFormat="True" MaskType="Numeric" Mask="f2"/>
+                    </dxg:GridColumn.EditSettings>
+                </dxg:GridColumn>
 
 
 
